ファイルの読み込み方法を変更

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <link href="botui.min.css" rel="stylesheet">
-        <link href="botui-theme-default.css" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
+        <link href="css/botui.min.css" rel="stylesheet">
+        <link href="css/botui-theme-default.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
         
 
-        <script type="text/javascript" src="vue.js"></script>
-        <script type="text/javascript" src="botui.min.js"></script>
+        <script type="text/javascript" src="lib/vue.js"></script>
+        <script type="text/javascript" src="lib/botui.min.js"></script>
         
         <title>chat</title>
     </head>
